fix alignment on lists

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,4 +1,3 @@
 .max-w-prose {
     max-width: 130ch;
-    margin: 0 auto;
 }
